ingress/Kubernetes Ingress with TLS-SSL/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/web1"
        backend:
          service:
            name: webapp1-svc
            port:
              number: 80
  - host: 
    http:
      paths:
      - pathType: Prefix
        path: "/web2"
        backend:
          service:
            name: webapp2-svc
            port:
              number: 80
